config/bak/virtualservice-webserver-delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webserver
spec:
  hosts:
  - webserver
  http:
  - route:
    - destination:
        host: webserverv10
    fault:
      delay:
        percentage:
          value: 50
        fixedDelay: 3s
