config/bak/virtualservice-webserver-redirect.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webserver
spec:
  hosts:
  - webserver
  http:
  - match:
    - uri:
        exact: "/version"
    redirect:
      uri: /
      authority: webserverv10
