config/bak/virtualservice-webserver.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webserver
spec:
  hosts:
  - webserver
  http:
  - route:
    - destination:
        host: webserverv10
